--- a/index.html
+++ b/index.html
@@ -200,13 +200,13 @@
       const resultValues = values.cbd
       switch(value) {
         case values.cbd[0]:
-          getDropsImage.innerHTML = '<img class="drops-appear" src="./img/aceite-CBD-5.png"/>'
+          getDropsImage.innerHTML = '<img class="drops-appear" src="./img/aceite-5.png"/>'
         break;
         case values.cbd[1]:
         getDropsImage.innerHTML = '<img class="drops-appear" src="./img/menta10-uai-min.png"/>'
         break;
         case values.cbd[2]:
-        getDropsImage.innerHTML = '<img class="drops-appear" src="./img/aceite-CBD-15.png"/>'
+        getDropsImage.innerHTML = '<img class="drops-appear" src="./img/aceite-15.png"/>'
         break;
       }
     }
