--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Document</title>
 </head>
 <body>
-  <section>
+  <section id="drops">
     <div class="drops-main">
       <div class="drops-container">
         <div class="drops-logo"><img src="./img/hakunaoil-new.png" alt="Hakuna-oil"></div>
@@ -35,47 +35,51 @@
       </div>
       <p class="drops-disclaimer">Disclaimer: Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla ea nesciunt amet quibusdam fugiat eveniet alias maxime optio quae! Tempora possimus nisi sit! Voluptatum quisquam, inventore quae ratione accusantium quis.</p>
     </div>
-    </section>
-    <script>
-      const getWeight     = document.getElementById("weight")
-      const getFocus      = document.getElementById("focus")
-      const getCBD        = document.getElementById("cbd")
-      const getResult     = document.getElementById("drops-result")
-      const getDropsImage = document.getElementById("drops-image") 
-      const getValues     = document.getElementById("drops-selection")
-      const values = {
-        "focus": ["Bienestar y afecciones suaves", "Bienestar y afecciones moderadas", "Alivio de afecciones graves"],
-        "pain": ["soft", "medium", "hard"],
-        "weight": ["11", "12-20", "21-38", "29-68", "69-108", "108"],
-        "cbd": ["Aceite CBD 5%", "Aceite CBD 10%", "Aceite CBD 15%"],
-        "Aceite CBD 5%": [
-        {"soft": ["2", "3", "5", "6", "9", "11"]},
-        {"medium": ["3", "5", "6", "8", "11", "15"]},
-        {"hard": ["5","6","8","9","14","23"]}
-        ], 
-        "Aceite CBD 10%": [
-        {"soft": ["1", "2", "2", "3", "5", "6"]},
-        {"medium": ["2", "2", "3", "3", "6", "8"]},
-        {"hard": ["2","3","3","5","7","11"]}
-        ],
-        "Aceite CBD 15%": [
-        {"soft": ["1", "1", "2", "2", "3", "4"]},
-        {"medium": ["1", "2", "2", "3", "4", "5"]},
-        {"hard": ["2","2","3","3","5","8"]}
-        ]
-      }
-      //getValue
-      const getResultValues = () => {
-      return getValues.innerHTML = `${getFocus.value} | ${getCBD.value} | ${getWeight.value == "108" ? "Más de" + " " + getWeight.value + " " + "Kg" : getWeight.value + " " + "Kg" }`
+
+  </section>
+  <script>
+    const getWeight     = document.getElementById("weight")
+    const getFocus      = document.getElementById("focus")
+    const getCBD        = document.getElementById("cbd")
+    const getResult     = document.getElementById("drops-result")
+    const getDropsImage = document.getElementById("drops-image") 
+    const getValues     = document.getElementById("drops-selection")
+    const values = {
+      "focus": ["Bienestar y afecciones suaves", "Bienestar y afecciones moderadas", "Alivio de afecciones graves"],
+      "pain": ["soft", "medium", "hard"],
+      "weight": ["11", "12-20", "21-38", "29-68", "69-108", "108"],
+      "cbd": ["Aceite CBD 5%", "Aceite CBD 10%", "Aceite CBD 15%"],
+      "Aceite CBD 5%": [
+      {"soft": ["2", "3", "5", "6", "9", "11"]},
+      {"medium": ["3", "5", "6", "8", "11", "15"]},
+      {"hard": ["5","6","8","9","14","23"]}
+      ], 
+      "Aceite CBD 10%": [
+      {"soft": ["1", "2", "2", "3", "5", "6"]},
+      {"medium": ["2", "2", "3", "3", "6", "8"]},
+      {"hard": ["2","3","3","5","7","11"]}
+      ],
+      "Aceite CBD 15%": [
+      {"soft": ["1", "1", "2", "2", "3", "4"]},
+      {"medium": ["1", "2", "2", "3", "4", "5"]},
+      {"hard": ["2","2","3","3","5","8"]}
+      ]
+    }
+    //getValue
+    const getResultValues = () => {
+    return getValues.innerHTML = `${getFocus.value} | ${getCBD.value} | ${getWeight.value == "108" ? "Más de" + " " + getWeight.value + " " + "Kg" : getWeight.value + " " + "Kg" }`
     }
     // Options components
     for (let i = 0; i < values.weight.length; i++) {
-      if (values.weight[i] == "11") {
-        getWeight.innerHTML += `<option value="${values.weight[i]}">${values.weight[i]} Kg</option>`
-      } else if (values.weight[i] == "108") {
-        getWeight.innerHTML += `<option value="${values.weight[i]}">Más de ${values.weight[i]} Kg</option>`
-      } else {
-        getWeight.innerHTML += `<option value="${values.weight[i]}">Entre ${values.weight[i]} Kg</option>`
+      switch(values.weight[i]) {
+        case "11":
+          getWeight.innerHTML += `<option value="${values.weight[i]}">${values.weight[i]} Kg</option>`
+        break;
+        case "108":
+          getWeight.innerHTML += `<option value="${values.weight[i]}">Más de ${values.weight[i]} Kg</option>`
+        break;
+        default:
+          getWeight.innerHTML += `<option value="${values.weight[i]}">Entre ${values.weight[i]} Kg</option>`
       }
     }
     const createOptions = (id, arr ) => {
@@ -94,13 +98,13 @@
       
       switch(drops) {
         case "1":
-          return getResult.innerHTML = `<div class="drops-total"><h4>${drops}</h4> <p>Gota al día</p></div>`
+          getResult.innerHTML = `<div class="drops-total"><h4>${drops}</h4> <p>Gota al día</p></div>`
         break;
         case "2":
-          return getResult.innerHTML = `<div class="drops-total"><h4>${drops}</h4> <p>Gotas/día (en 2 veces)</p></div>`
+          getResult.innerHTML = `<div class="drops-total"><h4>${drops}</h4> <p>Gotas/día (en 2 veces)</p></div>`
         break;
         default:
-          return getResult.innerHTML = `<div class="drops-total"><h4>${drops}</h4> <p>Gotas/día (en 3 veces)</p></div>`
+          getResult.innerHTML = `<div class="drops-total"><h4>${drops}</h4> <p>Gotas/día (en 3 veces)</p></div>`
       }
     }
     result(getFocus.value, getWeight.value, getCBD.value)
@@ -120,6 +124,6 @@
       }
     }
 
-  </script>
+  </script> 
 </body>
 </html>
