--- a/index.html
+++ b/index.html
@@ -29,9 +29,13 @@
             </div>
           </div>
         </div>
-        <h3>Cantidad de gotas calculada para tu objetivo y peso</h3>
-        <p id="drops-selection"></p>
-        <div id="drops-result" class="drops-result"></div>
+        <div class="drops-result-container">
+          <div class="drops-result-text">
+            <h3>Cantidad de gotas calculada para tu objetivo y peso</h3>
+            <p id="drops-selection"></p>
+          </div>
+          <div id="drops-result" class="drops-result"></div>
+        </div>
       </div>
       <p class="drops-disclaimer">Disclaimer: Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla ea nesciunt amet quibusdam fugiat eveniet alias maxime optio quae! Tempora possimus nisi sit! Voluptatum quisquam, inventore quae ratione accusantium quis.</p>
     </div>
