create HTMl with JS

--- a/index.html
+++ b/index.html
@@ -8,130 +8,8 @@
   <title>Document</title>
 </head>
 <body>
-  <section id="drops">
-    <div class="drops-main">
-      <div class="drops-container">
-        <div class="drops-logo"><img src="./img/hakunaoil-new.png" alt="Hakuna-oil"></div>
-        <h2>Calcula la cantidad de gotas</h2>
-        <div class="drops-content">
-          <div id="drops-image" class="drops-image">
-            <img class="drops-appear" src="./img/Aceite-CBD-5.png">
-          </div>
-          <div class="drops-settings">
-            <h3>¿Cuál va a ser el uso?</h3>
-            <select id="focus" class="focus" name="focus"></select>
-            <h3>Indica un peso</h3>
-            <select id="weight" class="weight" name="weight"></select>
-            <h3>Elige un % CBD</h3>
-            <select id="cbd" class="cbd" name="cbd" onchange="changeProduct(getCBD.value)"></select>
-            <div class="drops-calculate-content">
-              <input class="drops-calculate" type="button" value="Calcular" onclick="result(getFocus.value, getWeight.value, getCBD.value)" />
-            </div>
-          </div>
-        </div>
-        <h3>Cantidad de gotas calculada para tu objetivo y peso</h3>
-        <div class="drops-result-container">
-          <div class="drops-result-text">
-            <p id="drops-selection"></p>
-          </div>
-          <div id="drops-result" class="drops-result"></div>
-        </div>
-      </div>
-      <p class="drops-disclaimer">Disclaimer: Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla ea nesciunt amet quibusdam fugiat eveniet alias maxime optio quae! Tempora possimus nisi sit! Voluptatum quisquam, inventore quae ratione accusantium quis.</p>
-    </div>
-
-  </section>
-  <script>
-    const getWeight     = document.getElementById("weight")
-    const getFocus      = document.getElementById("focus")
-    const getCBD        = document.getElementById("cbd")
-    const getResult     = document.getElementById("drops-result")
-    const getDropsImage = document.getElementById("drops-image") 
-    const getValues     = document.getElementById("drops-selection")
-    const values = {
-      "focus": ["Bienestar y afecciones suaves", "Bienestar y afecciones moderadas", "Alivio de afecciones graves"],
-      "pain": ["soft", "medium", "hard"],
-      "weight": ["11", "12-20", "21-38", "29-68", "69-108", "108"],
-      "cbd": ["Aceite CBD 5%", "Aceite CBD 10%", "Aceite CBD 15%"],
-      "Aceite CBD 5%": [
-        {"soft": ["2", "3", "5", "6", "9", "11"]},
-        {"medium": ["3", "5", "6", "8", "11", "15"]},
-        {"hard": ["5","6","8","9","14","23"]}
-      ], 
-      "Aceite CBD 10%": [
-        {"soft": ["1", "2", "2", "3", "5", "6"]},
-        {"medium": ["2", "2", "3", "3", "6", "8"]},
-        {"hard": ["2","3","3","5","7","11"]}
-      ],
-      "Aceite CBD 15%": [
-        {"soft": ["1", "1", "2", "2", "3", "4"]},
-        {"medium": ["1", "2", "2", "3", "4", "5"]},
-        {"hard": ["2","2","3","3","5","8"]}
-      ]
-    }
-
-    
-    //getValue
-    const getResultValues = () => {
-      (window.innerWidth > 600)
-      ? getValues.innerHTML = `${getFocus.value} | ${getCBD.value} | ${getWeight.value == "108" ? "Más de" + " " + getWeight.value + " " + "Kg" : getWeight.value + " " + "Kg" }`
-      : getValues.innerHTML = `- ${getFocus.value} </br> - ${getCBD.value} </br> - ${getWeight.value == "108" ? "Más de" + " " + getWeight.value + " " + "Kg" : getWeight.value + " " + "Kg" }`
-    }
-    // Options components
-    for (let i = 0; i < values.weight.length; i++) {
-      switch(values.weight[i]) {
-        case "11":
-          getWeight.innerHTML += `<option value="${values.weight[i]}">${values.weight[i]} Kg</option>`
-        break;
-        case "108":
-          getWeight.innerHTML += `<option value="${values.weight[i]}">Más de ${values.weight[i]} Kg</option>`
-        break;
-        default:
-          getWeight.innerHTML += `<option value="${values.weight[i]}">Entre ${values.weight[i]} Kg</option>`
-      }
-    }
-    const createOptions = (id, arr ) => {
-      for (let i = 0; i < arr.length; i++) {
-        id.innerHTML += `<option value="${arr[i]}">${arr[i]}</option>`
-      }
-    }
-    createOptions(getFocus, values.focus)
-    createOptions(getCBD, values.cbd)
-
-    const result = (focusValor, weightValor, cbdValor) => {
-      const focusPosition = values.focus.indexOf(focusValor)
-      const weightPosition = values.weight.indexOf(weightValor)
-      const drops = values[cbdValor][focusPosition][values.pain[focusPosition]][weightPosition]
-      getResultValues()
-      
-      switch(drops) {
-        case "1":
-          getResult.innerHTML = `<div class="drops-total"><h4>${drops}</h4> <p>Gota al día</p></div>`
-        break;
-        case "2":
-          getResult.innerHTML = `<div class="drops-total"><h4>${drops}</h4> <p>Gotas/día (en 2 veces)</p></div>`
-        break;
-        default:
-          getResult.innerHTML = `<div class="drops-total"><h4>${drops}</h4> <p>Gotas/día (en 3 veces)</p></div>`
-      }
-    }
-    result(getFocus.value, getWeight.value, getCBD.value)
-
-    const changeProduct = (value) => {
-      const resultValues = values.cbd
-      switch(value) {
-        case values.cbd[0]:
-          getDropsImage.innerHTML = '<img class="drops-appear" src="./img/Aceite-CBD-5.png"/>'
-        break;
-        case values.cbd[1]:
-        getDropsImage.innerHTML = '<img class="drops-appear" src="./img/menta10-uai-min.png"/>'
-        break;
-        case values.cbd[2]:
-        getDropsImage.innerHTML = '<img class="drops-appear" src="./img/Aceite-CBD-15.png"/>'
-        break;
-      }
-    }
-
-  </script> 
+  <section id="drops"></section>
+  <script defer src="./js/calculator-compose.js"></script>
+  <script defer src="./js/calculator-logic.js"></script>
 </body>
 </html>
