--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Document</title>
 </head>
 <body>
-  <section id="drops"></section>
+  <section id="drops-recommended"></section>
   <script defer src="./js/calculator-compose.js"></script>
   <script defer src="./js/calculator-logic.js"></script>
 </body>
